# starweb

./: README.md  RULES.md  pyproject.toml
games/mygame/: state.json  turn_0001.json  turn_0002.json  turn_0003.json  turn_0004.json  turn_0005.json
games/test1/: state.json  turn_0001.json  turn_0002.json  turn_0003.json  turn_0004.json  turn_0005.json  turn_0006.json  turn_0007.json  turn_0008.json  turn_0009.json  turn_0010.json  turn_0011.json  turn_0012.json  turn_0013.json  turn_0014.json  turn_0015.json  turn_0016.json  turn_0017.json  turn_0018.json  turn_0019.json  turn_0020.json  turn_0021.json  turn_0022.json  turn_0023.json  turn_0024.json  turn_0025.json  turn_0026.json  turn_0027.json  turn_0028.json  turn_0029.json  turn_0030.json  turn_0031.json  turn_0032.json  turn_0033.json  turn_0034.json  turn_0035.json  turn_0036.json  turn_0037.json
games/test2/: state.json  turn_0001.json  turn_0002.json  turn_0003.json  turn_0004.json  turn_0005.json  turn_0006.json  turn_0007.json  turn_0008.json  turn_0009.json  turn_0010.json  turn_0011.json  turn_0012.json  turn_0013.json  turn_0014.json  turn_0015.json  turn_0016.json  turn_0017.json  turn_0018.json  turn_0019.json  turn_0020.json  turn_0021.json  turn_0022.json  turn_0023.json  turn_0024.json  turn_0025.json  turn_0026.json  turn_0027.json  turn_0028.json  turn_0029.json  turn_0030.json  turn_0031.json  turn_0032.json  (+47 more)
starweb/: __init__.py  __main__.py  agents.py  bulletin.py  cli.py  comms.py  engine.py  mapgen.py  models.py  narrative.py  orchestrator.py  orders.py  server.py
ui/: monitor.html
(+5 files in other folders)
